View Issue Details

IDProjectCategoryView StatusLast Update
0025928Open CASCADEOCCT:Codingpublic2015-10-16 16:47
ReporteramlAssigned Tobugmaster  
PrioritynormalSeverityfeature 
Status closedResolutionfixed 
Target Version6.9.0Fixed in Version6.9.0 
Summary0025928: Tool for comparing curves
DescriptionIt is necessary to develop special tool like "xdistcs" for comparing curves. It will help to debug intersection curves and already created projected curves. "xdistcs" command uses projlib projection on single point level and does not operate with whole curve projection.

Steps To ReproduceN/A
TagsNo tags attached.
Test case numberNot needed

Activities

git

2015-03-13 14:44

administrator   ~0038322

Branch CR25928 has been created by aml.

SHA-1: 942af3a3b90fc304d1cf277c47a21c6e63377821


Detailed log of new commits:

Author: aml
Date: Fri Mar 13 13:27:01 2015 +0300

    0025928: Tool for comparing curves
    
    I
    New commands:
    xdistcc - check distance between two 3d curves.
    xdistcc2ds - check distance between 3d curve and curve on surface (projected curve).
    xdistc2dc2dss - check distance between two curve on surface (projected curves).
    
    This commands are print 3d distance between input objects built on even grid.
    It is supposed that curves have same parametrization.
    
    usage:
    xdistcc curve1 curve2 startParam finishParam [NumberOfSamplePoints]
    xdistcc2ds c c2d surf startParam finishParam [NumberOfSamplePoints]
    xdistc2dc2dss c2d_1 c2d_2 surf1 surf2 startParam finishParam [NumberOfSamplePoints]
    
    II
    Doxygen documentation about "xdist" family added.

aml

2015-03-13 14:45

developer   ~0038323

Dear msv,
Please check current state of branch CR25928.

msv

2015-03-13 19:28

developer   ~0038361

dox\dev_guides\debug\debug.md:
In the phrase:
"It is assumed that curves have same parametrization diapason and startParam < finishParam."
The word "diapason" is to be replaced with "range".

git

2015-03-16 07:18

administrator   ~0038378

Branch CR25928 has been updated forcibly by aml.

SHA-1: 11e28120bd25c2d982c259b035ec12155f231195

aml

2015-03-16 07:18

developer   ~0038379

Dear msv,

Please check updated branch.

msv

2015-03-16 09:34

developer   ~0038381

Reviewed.
It is not needed to test, because the fix contains only new functions, without changes in any existing code.

mkv

2015-03-18 14:51

tester   ~0038643

Dear BugMaster,
Branch CR25928 from occt git-repository (and master from products git-repository) was compiled on Linux and Windows platforms on Release mode.
SHA-1: 11e28120bd25c2d982c259b035ec12155f231195

Number of compiler warnings:

occt component :
Linux: 18 (18 on master)
Windows: 0 (0 on master)

products component :
Linux: 11 (11 on master)
Windows: 4 (4 on master)

git

2015-10-16 16:47

administrator   ~0047040

Branch CR25928 has been deleted by kgv.

SHA-1: 11e28120bd25c2d982c259b035ec12155f231195

Related Changesets

occt: master 0a243bb4

2015-03-13 10:27:01

aml


Committer: bugmaster Details Diff
0025928: Tool for comparing curves

I
New commands:
xdistcc - check distance between two 3d curves.
xdistcc2ds - check distance between 3d curve and curve on surface (projected curve).
xdistc2dc2dss - check distance between two curve on surface (projected curves).

This commands are print 3d distance between input objects built on even grid.
It is supposed that curves have same parametrization.

usage:
xdistcc curve1 curve2 startParam finishParam [NumberOfSamplePoints]
xdistcc2ds c c2d surf startParam finishParam [NumberOfSamplePoints]
xdistc2dc2dss c2d_1 c2d_2 surf1 surf2 startParam finishParam [NumberOfSamplePoints]

II
Doxygen documentation about "xdist" family added.
Affected Issues
0025928
mod - dox/dev_guides/debug/debug.md Diff File
mod - src/GeometryTest/GeometryTest_TestProjCommands.cxx Diff File

Issue History

Date Modified Username Field Change
2015-03-13 12:23 aml New Issue
2015-03-13 12:23 aml Assigned To => aml
2015-03-13 14:44 git Note Added: 0038322
2015-03-13 14:45 aml Note Added: 0038323
2015-03-13 14:45 aml Assigned To aml => msv
2015-03-13 14:45 aml Status new => resolved
2015-03-13 14:45 aml Steps to Reproduce Updated
2015-03-13 19:28 msv Note Added: 0038361
2015-03-13 19:28 msv Assigned To msv => aml
2015-03-13 19:28 msv Status resolved => assigned
2015-03-16 07:18 git Note Added: 0038378
2015-03-16 07:18 aml Note Added: 0038379
2015-03-16 07:18 aml Assigned To aml => msv
2015-03-16 07:18 aml Status assigned => resolved
2015-03-16 09:34 msv Note Added: 0038381
2015-03-16 09:34 msv Assigned To msv => bugmaster
2015-03-16 09:34 msv Status resolved => reviewed
2015-03-16 12:20 mkv Assigned To bugmaster => mkv
2015-03-18 14:51 mkv Note Added: 0038643
2015-03-18 14:51 mkv Assigned To mkv => bugmaster
2015-03-18 14:51 mkv Status reviewed => tested
2015-03-18 14:51 mkv Test case number => Not needed
2015-03-20 13:34 bugmaster Changeset attached => occt master 0a243bb4
2015-03-20 13:34 bugmaster Status tested => verified
2015-03-20 13:34 bugmaster Resolution open => fixed
2015-05-14 15:28 aiv Status verified => closed
2015-05-14 15:31 aiv Fixed in Version => 6.9.0
2015-10-16 16:47 git Note Added: 0047040